--- a/browser/package.json
+++ b/browser/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "react/index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack --watch",
+    "mode": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
+    "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
