--- a/browser/package.json
+++ b/browser/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "react/index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack --mode development --watch",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
