--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ build/Release
 node_modules/
 jspm_packages/
 
+#Ignore bundle files
+bundle.js
+bundle.js.map
+
 # TypeScript v1 declaration files
 typings/
 
@@ -59,8 +63,3 @@ typings/
 
 # next.js build output
 .next
-
-# los bundles
-bundle.js
-bundle.min.js
-node_modules
