--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Best Team",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
