--- a/browser/package.json
+++ b/browser/package.json
@@ -23,7 +23,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "babel": "^6.23.0",
