--- a/browser/package.json
+++ b/browser/package.json
@@ -23,6 +23,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^1.2.1",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "valid-url": "^1.0.9"
